Fix social footer on mobile

--- a/assets/less/site/footer.less
+++ b/assets/less/site/footer.less
@@ -24,13 +24,14 @@
 }
 
 .footer-social {
-  margin-right: -5px;
+  margin-right: -7px;
   text-align: right;
 }
 
 .footer-social-item {
   color: @secondary-text-color;
-  padding: 0 4px;
+  font-size: 18px;
+  padding: 0 5px;
 }
 
 @media (max-width: 767px) {
@@ -40,11 +41,12 @@
   }
 
   .copyright {
-    margin-top: 10px;
+    margin-top: 15px;
     order: 1;
   }
 
   .footer-social {
+    margin-right: 0;
     margin-top: 20px;
   }
 }
